# sandwich-pipeline

./: .gitignore  .gitmodules  Bobaya.lnk  Bobini.lnk  Bobo Designer.lnk  Bobo Painter.lnk  Bobuke.sh  CODING_STANDARD.md  Mayo.sh  Panini.sh  README.md  install_desktop_files.py  pyproject.toml
.githooks/: post-checkout  pre-commit  update-venv
.github/workflows/: ci.yml
.typecheck/: README.md  ty-baseline.txt
desktop-files/: blender.desktop  mayo.desktop  microwave.desktop  panini.desktop
pipeline/: __main__.py  env_sg.pyi  sitecustomize.py
pipeline/pipe/: __init__.py  playblast_shotgrid.py  texconverter.py
pipeline/pipe/asset/: __init__.py  paths.py  versioning.py
pipeline/pipe/b/: __init__.py  assetfile.py  publish.py  register.py
pipeline/pipe/db/: sgaadb.py  typing.py
pipeline/pipe/environment/: version_adapter.py
pipeline/pipe/glui/: dialogs.py  save_version_dialog.py  version_browser.py
pipeline/pipe/h/: __init__.py  animpostprocess.py  assetbuilder.py  component_output_hda.py  nodelayouts.py  publish.py  publish_hooks.py  shading.py  variants.py
pipeline/pipe/houdini/: publish_hooks.py
pipeline/pipe/m/: __init__.py  command.py  optionvar.py  picker.py  reload.py  scale_reference.py  turnaround.py  util.py  wrangler.py
pipeline/pipe/playblast/: naming.py  playblaster.py
pipeline/pipe/shot/: __init__.py  version_adapter.py
pipeline/pipe/shotgrid/: __init__.py  _memoize.py  client.py  entities.py  errors.py  paths.py
pipeline/pipe/sp/: assetfile.py  channels.py  dialogs.py  export.py  export_config.py  export_material_info.py  export_results.py  export_types.py  houdini.py  metadata.py  progress.py  ui.py
pipeline/pipe/struct/: db.py  timeline.py
pipeline/pipe/telemetry/: __init__.py  config.py  context.py  contract.py  emit.py  ingester.py  render_harvest.py  storage_scan.py
pipeline/pipe/util/: filemanager.py  playblaster.py
pipeline/pipe/versioning/: store.py
pipeline/shared/: util.py
pipeline/software/: baseclass.py
pipeline/software/houdini/: dcc.py
pipeline/software/maya/: dcc.py
pipeline/software/nuke/: dcc.py
pipeline/software/substance_designer/: dcc.py
pipeline/software/substance_painter/: dcc.py
src/: __main__.py  sitecustomize.py
src/core/: texconverter.py
src/dcc/blender/: launch.py
src/dcc/houdini/: launch.py  runtime.py
src/dcc/maya/: launch.py  runtime.py
src/dcc/nuke/: launch.py
src/dcc/substance_designer/: launch.py
src/dcc/substance_painter/: launch.py  runtime.py  ui.py
src/framework/: interface.py
src/pipe/: __init__.py  texconverter.py
src/pipe/asset/: version_adapter.py
src/pipe/blender/: assetfile.py  publish.py
src/pipe/houdini/: __init__.py  animpostprocess.py  assetbuilder.py  component_output_hda.py  nodelayouts.py  shading.py  variants.py
src/pipe/maya/: optionvar.py  picker.py  reload.py  scale_reference.py  space_switch.py  studiolibrary.py  turnaround.py
src/pipe/playblast/: encoding.py  playblaster.py
src/pipe/shot/: version_adapter.py
src/pipe/shotgrid/: client.py
src/pipe/substance_painter/: __init__.py  assetfile.py  channels.py  dialogs.py  export.py  export_config.py  ui.py  (+5 more)
src/software/: baseclass.py
telemetry-backend/: README.md  install_tarballs.md
~\AppData\Local/Epic Games/: PoseWrangler.ini
(+226 files in other folders)
