[project]
name = "sandwich-pipeline"
version = "0.1.0"
description = "Pipeline for BYU Animation's Class of 2027 capstone film"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Scott Milner",   email = "scottdmilner@gmail.com" },
    { name = "Dallin Clark",   email = "dallinbretclark@gmail.com" },
    { name = "Joseph Wardle",  email = "joseph.m.wardle@gmail.com" },
    { name = "Michael Harmon", email = "michaelharmonart@gmail.com" }
]
dependencies = [
    "attrs>=24.2.0,<25",
    "cattrs>=23.2.3,<24",
    "ffmpeg-python>=0.2.0,<0.3",
    "qt-py>=1.4.1,<2",
    "filelock>=3.17.0,<4",
    "six>=1.17.0,<2",
    "gitpython>=3.1.45,<4",
    "nxt-core>=0.18.1",
    "shotgun-api3>=3.8.4,<4",
]

[dependency-groups]
dev = [
    "ruff>=0.5.7,<0.6",
    "maya-stubs>=0.4.1,<0.5",
    "types-usd>=24.5.1,<25",
    "types-houdini>=19.5.1,<20",
    "types-katana>=5.0.5.0,<6",
    "types-mari>=5.0.5.0,<6",
    "types-nuke>=13.2.8.0,<14",
    "types-opencolorio>=2.2.1.2,<3",
    "types-pyside2>=5.15.2.1.7,<6",
    "types-substance-painter>=2023.8.3.0.0,<2024",
    "nptyping>=2.5.0,<3",
    "ty>=0.0.33",
    "fake-bpy-module-5-0>=20260128",
    # `psycopg` is only used by the telemetry ingester. Lab machines that
    # boot `pipe telemetry up` need it; workstations that only emit telemetry
    # don't. Lives in `dev` so type checking always finds it.
    "psycopg[binary]>=3.2,<4",
]

[tool.ruff]
exclude = [
    ".git",
    "MOPS",
    "NukeSurvivalToolkit_publicRelease",
    "VFX-LYNX",
    "ae_SVG",
    "dwpicker",
    "dwpicker_git",
    "lib/python",
    "mayacapture",
    "maya-timeline-marker_git",
    "modelChecker",
    "modelChecker_git",
    "rjg",
    'y-rig',
    "studiolibrary",
    "timeline_marker",
    "src/software/maya/scripts/**"
]

[tool.ty.rules]
# unused-type-ignore-comment = "ignore"

[tool.ty.analysis]
allowed-unresolved-imports = [
    "dwpicker.**",
    "modelChecker.**",
    "substance_painter_plugins.**",
    "yrig.**",
    "tractor.**",
]
replace-imports-with-any = [
    # shotgun_api3 is untyped; treat as Any to avoid churn.
    "shotgun_api3.**",
    # `mayaUsd` remains dynamic and is not fully typed.
    "mayaUsd",
    "mayaUsd.**",
    # Substance API surface is partially dynamic in plugin runtime.
    "substance_painter",
    "substance_painter.**",
]

[tool.ty.environment]
extra-paths = [
    "src/software/maya/scripts/",
    "src/software/nuke/tools/SKD_Tools/scripts",
    "src/",
]

[tool.ty.src]
include = ["src"]
respect-ignore-files = false
exclude = [
    ".git",
    "src/lib/MOPS/**",
    "src/software/nuke/tools/NukeSurvivalToolkit_publicRelease",
    "src/lib/VFX-LYNX/**",
    "src/lib/ae_SVG/**",
    "src/lib/python/**",
    "src/**/mayacapture/**",
    "src/**/maya-timeline-marker_git/**",
    "src/lib/y-rig/**",
    "src/**/studiolibrary/**",
    "src/**/timeline_marker/**",
    "src/**/houdini/scripts/**",
    "src/**/maya/scripts/**",
    "src/software/houdini/hsite/**/scripts/"
]


[tool.pyright]
extraPaths = [
    "src/software/maya/scripts/",
    "src/",
]
typeCheckingMode = "standard"
reportMissingModuleSource = "information"
